--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,9 @@ h1 {
     text-align: center;
     margin-bottom: 20px;
 }
+h3 {
+    margin-bottom: 30px;
+}
 
 .section {
     margin-bottom: 20px;
